--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 * {
     box-sizing: border-box;
 }
+html {
+    height: 100%; 
+    scroll-behavior: smooth;
+}
 
 :root {
     --grey: #E7E7E7;
@@ -44,14 +48,11 @@ header {
 }
 
 /** barre de recherche */
-/* .inputGroup{
-    min-height: 50px;
-} */
-/* form{
-    height: 50px;
-    background-color: var(--grey);
-    text-align: center;
-} */
+
+.form-control{
+height: auto;
+} 
+
 .inputGroupBorder {
     background: var(--grey);
     border: none;
@@ -109,7 +110,7 @@ header {
 /*--------------------------------------------------------------
 #  DROPDOWN SEARCH
 --------------------------------------------------------------*/
-.contents {
+.bloc-card {
     display: contents;
 }
 
@@ -125,9 +126,19 @@ header {
  .inputDropdownIngredient,
 .inputDropdownAppareil,
 .inputDropdownUstensil {
-
-    background: var(--blue);
+    border: none;
+    border-radius: 5px 0 0 5px;
+    padding: 1rem;
+    color: var(--white);
+    font-family: var(--lato-font);
+    /* background: var(--blue); */ 
 } 
+.inputDropdownIngredient
+ {
+
+    background: var(--blue); 
+} 
+
 
 .inputDropdownAppareil {
     background: var(--green);
@@ -149,22 +160,27 @@ header {
     background: var(--orange);
 }
 
- .btnDropdownIngredient,
+.btnDropdownIngredient,
 .btnDropdownAppareil,
-.btnDropdownUstensil {    
+.btnDropdownUstensil { 
+    border-radius: 0 5px 5px 0;
+    padding: 1rem;   
+   /*  background: var(--blue); */
+}
+.btnDropdownIngredient {
     background: var(--blue);
 }
  
 .btnDropdownAppareil {
-    background: #68D9A4;
+    background: var(--green);
 }
 
 .btnDropdownUstensil {
-    background: #ED6454;
+    background: var(--orange);
 }
 
 .dropDownList {
-    display: none;
+    display: block;
     columns: 4;
     list-style-type: none;
     padding: 0;
@@ -208,10 +224,22 @@ header {
     border-radius: 0 0 5px 5px;
 }
 
-/* .card-title {} */
+.card-title {
+    font-family: var(--lato-font);
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    color: var(--black);
+} 
 
 .card-time {
-
+    font-family: var(--lato-font);
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    color: var(--black);
     font-weight: bold;
 }
 
@@ -222,13 +250,24 @@ header {
 
 .card-description {
 
+    font-family: var(--lato-font);
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    color: var(--black);
     font-family: var(--roboto-font);
     font-size: 12px;
     line-height: 100%;
 }
 
 .card-ingredients {
-
+    font-family: var(--lato-font);
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    color: var(--black);
     font-weight: bold;
     font-size: 12px;
     line-height: 14px;
@@ -247,7 +286,7 @@ span {
 
 #recipes-not-found {
     display: none;
-    background: #E7E7E7;
+    background: var(--white);
     padding: 2rem;
     margin: 0;
     font-family: var(--lato-font);
